@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-29T16:20:05Z",
+  "timestamp" : "2023-08-30T08:19:11Z",
   "count_outdated" : 789,
   "uniques_outdated" : 457,
-  "count" : 819,
-  "uniques" : 481,
+  "count" : 820,
+  "uniques" : 482,
   "clones" : [
     {
       "timestamp": "2023-08-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
